# pmg-ec-2025-2-p1-liec-t1-g1-iot-garden-fernando

./: README.md
App/: IOT_copy_2.aia  IOT_copy_2.apk
Apresentacao/: README.md
Codigo/: .gitignore  README.md  build.sh
Codigo/iot/: diagram.json  platformio.ini.example
Codigo/iot/src/: main.cpp
Codigo/iot/src/config/: pins.h
Codigo/iot/src/modules/actuator/: actuator.cpp  actuator.h
Codigo/iot/src/modules/display/: display.cpp  display.h
Codigo/iot/src/modules/log/: log.cpp  log.h
Codigo/iot/src/modules/mqtt/: mqtt.cpp  mqtt.h
Codigo/iot/src/modules/sensor_dht/: sensor_dht.cpp  sensor_dht.h
Codigo/iot/src/modules/sensor_light/: sensor_light.cpp  sensor_light.h
Codigo/iot/src/modules/sensor_soil/: sensor_soil.cpp  sensor_soil.h
Codigo/iot/src/modules/triggers/: triggers.cpp  triggers.h
Codigo/server/: CMakeLists.txt
Codigo/server/include/: database.h  mqtt_client.h
Codigo/server/src/: database.cpp  main.cpp  mqtt_client.cpp  simulator.cpp
Documentacao/: 01-Introducão.md  02-Metodologias Ágeis.md  03-Desenvolvimento.md  04-Testes.md  05-Conclusão.md  06-Referências.md
Manual/: manual de utilização.md
